2010-01-09 Borut Razem <borut.razem AT siol.net>

	* sdcc/as/*/conf.mk: removed
	  sdcc/as/conf.mk: added
	  sdcc/as/*/Makefile.in: use common sdcc/as/conf.mk
	  sdcc/as/*/clean.in: unified

2010-01-04 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx, support/cpp/libcpp/internal.h,
	  support/cpp/libcpp/lex.c, support/cpp/sdcpp.c:
	  fixed bug #2919991: #Pragma preproc_asm cannot be used by -- std-c99.
	* support/cpp/libcpp/macro.c, support/cpp/version.c:
	  SDCPP synchronized with GCC CPP release version 4.4.2
	* sdcc/as/link/lklist.c: fixed NULL pointer dereference
	* sdcc/as/link/lkmain.c: do not complaint when opening optional adb files

2009-12-31 Borut Razem <borut.razem AT siol.net>

	* sdcc/as/link/lkarea.c, sdcc/as/link/lkdata.c, sdcc/as/link/lklist.c,
	  sdcc/as/link/lks19.c, sdcc/as/link/lkmain.c, sdcc/as/link/lkeval.c,
	  sdcc/as/link/lklibr.c, sdcc/as/link/lkaomf51.c, sdcc/as/link/lkhead.c,
	  sdcc/as/link/lklex.c, sdcc/as/link/lkrloc.c, sdcc/as/link/aslink.h:
	  sync with aslink 2.0
	* sdcc/as/link/lks19.c: include "sdld.c"
	* sdcc/as/link/aslink.dsp: cleaning
	* sdcc/as/link/aslink.h: changed the type Character Type Definitions to char

2009-12-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed bug 2912013

2009-12-25 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/link/aslink.dsp, as/link/sdld_all.dsp: fixed destination path of
	sdld.exe, sdldz80.exe, sdldgb.exe, and sdld6808.exe
	
2009-12-21 Borut Razem <borut.razem AT siol.net>

	* Makefile.in: fixed hc08
	* Makefile.in, as/link/Makefile.in: fixed installation

2009-12-20 Borut Razem <borut.razem AT siol.net>

	* as/link/lkmain.c, as/link/lksdcclib.c,
	  as/link/lklib.c, as/link/lklex.c, as/link/aslink.h:
	  fixed "o" file extension for z80 and gb targets

2009-12-19 Borut Razem <borut.razem AT siol.net>

	* configure, Makefile.in, configure.in, as/link/Makefile.in,
	  all.dsp, as/link/aslink.dsp, as/link/sdld_all.dsp,